# perma-bench

./: .clang-format  .gitignore  CMakeLists.txt  DEPENDENCIES.md  LICENSE  README.md  REPRODUCIBILITY.md  all_plots.sh  format.sh  mixed_converter.py  nvmbm.cpp  raw.yaml  requirements.txt  setup_viz.sh  test.yaml  visualize.sh
.github/workflows/: clang-format.yml  cmake.yml
configs/: bm-suite.yaml  default-config.yaml  dev-config.yaml  large-dev-config.yaml  numa.yaml  parallel-dev-config.yaml  parallel_table_scan_intermediate.yaml  test.yaml
configs/workloads/: README.md  index_lookup.yaml  indexing.yaml  intermediate_result.yaml  large_persistent_copy.yaml  logging.yaml  page_propagation.yaml  table_scan.yaml
old_results/: intel-128.json  intel-256.json  intel-512.json  intel-gen2.json  nvdimm-hpe.json
old_results/custom_index/: fast_fair.txt  intel-512.json
old_results/dimms/: dimm1.json  dimm2.json
old_results/latency/: nvdimm-hpe.json
old_results/speed/: speed2133-dram.json  speed2400.json
patches/: viper.patch
resources/configs/: dev-config.yaml
resources/test_data/configs/: test_random.yaml  test_seq.yaml
results/: intel-128.json  intel-256.json  intel-2gen.json  intel-512.json  intel-dram.json  zdram.json
results/custom_index/: fast_fair.txt  intel-128.json  intel-256.json
results/custom_join/: dash.txt  intel-128.json  intel-256.json
results/dimms/: 1dimms.json  2dimms.json  4dimms.json  6dimms.json  dimm4.json  dimm6.json
results/dram/: apache-128.json  barlow-256.json  intel-128.json  intel-256.json  intel-512.json
results/hash_index/: apache-128.json  apache-512.json  barlow-256.json  dash.txt  intel-256.json
results/hybrid_tree_index/: a-256.txt  apache-256-lbtree-pf-off.json  apache-256-lbtree-pf-on.json  apache-256.json  b-256.txt  barlow-256-lbtree-pf-off.json  barlow-256-lbtree-pf-on.json  barlow-256.json  lbtree.txt
results/latency/: intel-256.json  intel-512.json  intel-gen2.json
results/mixed/: intermediate_result_table_scan_mixed_results.json
results/numa/: intel-128.json  intel-256.json  numa_results.json
results/pmem/: apache-128.json  barlow-256-pf-off.json.bk  barlow-256.json  barlow-256.json.bk  intel-128.json  intel-256.json  intel-512.json  z-apache-dram.json.bk  z-barlow-dram.json  zdram.json
results/pmem_tree_index/: fast_fair.txt  intel-128.json  intel-512.json
results/prefetcher/: a-256-pf-off.json  a-256-pf-on.json  b-256-pf-off.json  b-256-pf-on.json
results/raw/: test_one_thread.json  test_several_threads.json
results/speed/: 2133-dram.json  2133.json  2400.json  2666.json  b-2933.json  speed2133.json
scripts/: Dockerfile  clean-code.sh  common.py  custom_ops.py  double_flush_latency.py  eADR.py  format.sh  hash_aggregation.py  index.py  index_lookup.py  index_update.py  intermediate_result.py  large_persistent_copy.py  large_read_write.py  latency.py  logging_grouped.py  logging_partition.py  logging_threads_size.py  mixed_intermediate_result_table_scan.py  numa.py  ops_to_dram.py  page_propagation.py  persist_instruction.py  pmem_log_dram_index.py  pmem_scan_dram_aggregation.py  run_benchmark.sh  run_docker.sh  seq_rnd_read.py  seq_write.py  write_cache_op.py
scripts/custom_index/: ff.patch  index.py
scripts/custom_join/: dash.patch  join.py
scripts/dimms/: dimms.py
scripts/hash_index/: hash_index.py
scripts/hybrid_tree_index/: fptree.cpp.eadr  fptree.py  fptree_pibench.sh  hybrid_index.py  lbtree_eadr.patch  lbtree_keygen.sh  lbtree_lookup.yaml
scripts/latency/: aggregation.py  custom_ops.py  latency.py
scripts/mixed/: mixed_intermediate_result_table_scan.py  page_propagation.py  pmem_log_dram_index.py  pmem_scan_dram_aggregation.py
scripts/numa/: numa.py
scripts/pmem_tree_index/: index.py
scripts/prefetcher/: prefetcher.py  prefetcher_reads.yaml
scripts/speed/: speed.py
src/: CMakeLists.txt  benchmark.cpp  benchmark.hpp  benchmark_config.cpp  benchmark_config.hpp  benchmark_factory.cpp  benchmark_factory.hpp  benchmark_suite.cpp  benchmark_suite.hpp  config_parser.cpp  config_parser.hpp  fast_random.cpp  fast_random.hpp  io_operation.cpp  io_operation.hpp  numa.cpp  numa.hpp  nvmbm.cpp  parallel_benchmark.cpp  parallel_benchmark.hpp  perma.cpp  read_write_ops.hpp  single_benchmark.cpp  single_benchmark.hpp  thread_manager.cpp  thread_manager.hpp  utils.cpp  utils.hpp
src/benchmarks/: bm0.cpp  bm0.hpp  read_benchmark.cpp  read_benchmark.hpp  write_benchmark.cpp  write_benchmark.hpp
test/: CMakeLists.txt  benchmark_test.cpp  config_test.cpp  custom_operations_test.cpp  perma_test.cpp  read_write_test.cpp  test_utils.cpp  test_utils.hpp  utils_test.cpp
test/resources/configs/: test_custom_ops.yaml  test_matrix.yaml  test_parallel_matrix.yaml  test_parallel_seq_random.yaml  test_random.yaml  test_seq.yaml
visualization/: main.py
viz/: README.md  main.py  mat_json_plotter.py  mat_json_reader.py  mat_json_utils.py  png_creator.py  raw_json_plotter.py  raw_json_reader.py  raw_json_utils.py  raw_plotter.py  requirements.txt  user_interface.py  utils.py
viz/html/: style.css
workloads/: README.md  logging.yaml  page_propagation.yaml
workloads/operations/: aggregation.yaml  hash_index.yaml  hybrid_tree_index.yaml  index.yaml  join.yaml  latency.yaml  tree_index.yaml
workloads/parallel/: page_propagation.yaml  pmem_log_dram_index.yaml  pmem_log_dram_write.yaml  pmem_scan_dram_write.yaml
workloads/raw/: indexing.yaml  intermediate_result.yaml  large_persistent_copy.yaml  latency.yaml  logging.yaml  page_propagation.yaml  random_reads.yaml  random_writes.yaml  sequential_reads.yaml  sequential_writes.yaml  table_scan.yaml
